--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<div class="four columns">
 						<div class="section-title">
 							<h3>About us</h3>
-							<p>Our ambition is<br>our weapon.</p>
+							<p>Our musical culture is<br>our weapon.</p>
 						</div>
 					</div>
 					<div class="four columns">
